2月8日最終版

--- a/src/index.html
+++ b/src/index.html
@@ -95,16 +95,16 @@
                         <p class="data medium">勤務務時間：160h/月<br>
                         指名料：270,000円<br>
                         給与：1,000,000円</p>
-                        <p class="salary white bold bg_gradient">月収<span class="price font-roboto medium">1,270,000</span>円</p>
+                        <p class="salary white bold bg_gradient_Trigger">月収<span class="price font-roboto medium">1,270,000</span>円</p>
                     </div>
 
                     <div class="precedent_bottom_item font-notosans">
-                        <img class="slide-in-bottomTrigger delay-time02" src="assets/images/precedent/precedent_mari.png" alt="">
+                        <img class="slide-in-bottomTrigger gradient-delay-time02" src="assets/images/precedent/precedent_mari.png" alt="">
                         <h3 class="medium">六本木店 店長 MARIさん</h3>
                         <p class="data medium">勤務務時間：140h/月<br>
                             指名料：180,000円<br>
                             給与：540,000円</p>
-                        <p class="salary white bold bg_gradient">月収<span class="price font-roboto medium">720,000</span>円</p>
+                        <p class="salary white bold bg_gradient_Trigger delay-time02">月収<span class="price font-roboto medium">720,000</span>円</p>
                     </div>
 
                     <div class="precedent_bottom_item font-notosans">
@@ -113,7 +113,7 @@
                         <p class="data medium">勤務務時間：120h/月<br>
                             指名料：153,000円<br>
                             給与：360,000円</p>
-                        <p class="salary white bold bg_gradient">月収<span class="price font-roboto medium">513,000</span>円</p>
+                        <p class="salary white bold bg_gradient_Trigger delay-time04">月収<span class="price font-roboto medium">513,000</span>円</p>
                     </div>
                 </div>
             </div>
@@ -167,8 +167,8 @@
                     <img class="sp_only slide-in-bottomTrigger" src="assets/images/point/point_01_figure_sp.png" alt="">
                     <div class="point_item_text">
                         <span class="font-roboto bold tx_gradient">01</span>
-                        <h3 class="font-notosans bold white bg_gradient">業界で最高水準の給与体系</h3>
-                        <p class="font-notosans regular navy">今後も伸びていくことが予想されるストレッチ業界で、時給1,600円～5,000円＋高インセンティブと、最高水準の給与体系を誇っています。<br>
+                        <h3 class="font-notosans bold bg_gradient_Trigger">業界で最高水準の給与体系</h3>
+                        <p class="font-notosans regular navy fadeUpTrigger delay-time05">今後も伸びていくことが予想されるストレッチ業界で、時給1,600円～5,000円＋高インセンティブと、最高水準の給与体系を誇っています。<br>
                         明瞭評価ですべて給与に反映されるので、頑張った分どんどんお給料が上がっています。全力ストレッチなら、キャリアアップと高収入が手に入るチャンスが待っています。</p>
                     </div>
                 </div>
@@ -176,9 +176,9 @@
                 <div class="point_item">
                     <div class="point_item_text">
                         <span class="font-roboto bold tx_gradient">02</span>
-                        <h3 class="font-notosans bold white bg_gradient">充実した研修制度で</h3>
-                        <h3 class="font-notosans bold white bg_gradient">未経験でも安心</h3>
-                        <p class="font-notosans regular navy">全力ストレッチは若いスタッフが多く、9割の子が整体、フィットネス、ストレッチの経験がありません。<br>
+                        <h3 class="font-notosans bold bg_gradient_Trigger">充実した研修制度で</h3>
+                        <h3 class="font-notosans bold bg_gradient_Trigger delay-time1">未経験でも安心</h3>
+                        <p class="font-notosans regular navy fadeUpTrigger delay-time05">全力ストレッチは若いスタッフが多く、9割の子が整体、フィットネス、ストレッチの経験がありません。<br>
                         そこから独自の教育メソッドで短期間でプロのパーソナルトレーナーに成長出来る研修制度がありますので、未経験でも安心して飛び込んできてください。また、就業後も定期的に研修を行っており、より技術を磨いてリピート率を上げたい子を支援しています。</p>
                     </div>
                     <img class="slide-in-bottomTrigger" src="assets/images/point/point_02_figure.jpg" alt="">
@@ -188,9 +188,9 @@
                     <img class="slide-in-bottomTrigger" src="assets/images/point/point_03_figure.jpg" alt="">
                     <div class="point_item_text">
                         <span class="font-roboto bold tx_gradient">03</span>
-                        <h3 class="font-notosans bold white bg_gradient">独立支援でキャリアアップも</h3>
-                        <h3 class="font-notosans bold white bg_gradient">徹底サポート</h3>
-                        <p class="font-notosans regular navy">次のステップに進みたい子を支援する、社内ベンチャー制度での店舗オーナーになることや講師になるといったストレッチトレーナーの次のキャリアも用意してあります。</p>
+                        <h3 class="font-notosans bold bg_gradient_Trigger">独立支援でキャリアアップも</h3>
+                        <h3 class="font-notosans bold bg_gradient_Trigger delay-time1">徹底サポート</h3>
+                        <p class="font-notosans regular navy fadeUpTrigger delay-time05">次のステップに進みたい子を支援する、社内ベンチャー制度での店舗オーナーになることや講師になるといったストレッチトレーナーの次のキャリアも用意してあります。</p>
                     </div>
                 </div>
             </div>
@@ -326,12 +326,12 @@
                         <span class="sec_title_sub fadeDownTrigger">あなたに合ったエリアで働ける</span>
                     </div>
                     <div class="area_content">
-                        <p class="bg_gradient font-notosans bold white">全力ストレッチは全国35店舗</p>
-                        <p class="bg_gradient font-notosans bold white">まだまだ出店拡大中！</p>
+                        <p class="bg_gradient_text bg_gradient_Trigger font-notosans bold">全力ストレッチは全国35店舗</p>
+                        <p class="bg_gradient_text bg_gradient_Trigger font-notosans bold">まだまだ出店拡大中！</p>
                         <p class="font-notosans regular navy">一緒に全力ストレッチを育てていける<br>スタッフを募集しています。</p>
                     </div>
                 </div>
-                <img class="area_wrap_right" src="assets/images/area/area_map.png" alt="">
+                <img class="area_wrap_right fadeUpTrigger delay-time05" src="assets/images/area/area_map.png" alt="">
             </div>
         </section>
 
@@ -467,7 +467,7 @@
                 <span class="sec_title_sub fadeDownTrigger">募集要項</span>
             </div>
 
-            <div class="recruit_content">
+            <div class="recruit_content fadeUpTrigger">
                 <table class="font-notosans navy">
                     <tr>
                         <th class="medium">募集要項</th>
@@ -562,7 +562,7 @@
 
             <div class="entry_content">
                 <p class="font-notosans medium white">※必須項目をご入力の上、<br class="sp_only">送信ボタンを押してください。<p>
-                    <div class="entry_form">
+                    <div class="entry_form fadeUpTrigger">
                         <table class="font-notosans navy">
                             <tr>
                                 <th class="navy medium">お名前<span class="white regular">必須</span></th>
@@ -638,8 +638,6 @@
         
     </footer>
 
-    <!-- Smooth Scroll -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <!-- Media -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="assets/js/slick.min.js"></script>
