ヘッダーの背景色の設定をしました。

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/slick.css"/>
 </head>
 <body>
-    <header>
+    <header class="header js-header">
         <h1><img src="assets/images/common/logo_wh.png" alt="全力ストレッチ"></h1>
         <div class="header_right">
             <button class="gradient-btn pc_only" type="button" onclick="location.href='#entry'">WEBで簡単エントリー</button>
@@ -136,7 +136,7 @@
                 </div>
 
                 <div class="about_bottom">
-                    <h3 class="bg_gradient font-notosans white bold">芸能人やアスリートの方々が御用達</h3>
+                    <h3 class="bg_gradient_noanimation font-notosans white bold">芸能人やアスリートの方々が御用達</h3>
 
                     <ul class="about_slick">
                         <li><img src="assets/images/about/about_thumb_01.jpg" alt=""><h4 class="font-notosans regular navy">ゴルフ雑誌「ALBA」にて<br class="pc_only">
@@ -190,7 +190,7 @@
                         <span class="font-roboto bold tx_gradient">03</span>
                         <h3 class="font-notosans bold bg_gradient_Trigger">独立支援でキャリアアップも</h3>
                         <h3 class="font-notosans bold bg_gradient_Trigger delay-time1">徹底サポート</h3>
-                        <p class="font-notosans regular navy fadeUpTrigger delay-time05">次のステップに進みたい子を支援する、社内ベンチャー制度での店舗オーナーになることや講師になるといったストレッチトレーナーの次のキャリアも用意してあります。</p>
+                        <p class="font-notosans regular navy fadeUpTrigger delay-time05">次のステップに進みたい子を支援する社内ベンチャー制度があり、店舗オーナーになることや講師になるといったストレッチトレーナーの次のキャリアもご用意してあります。</p>
                     </div>
                 </div>
             </div>
@@ -203,10 +203,10 @@
             </div>
             
             <div class="schedule_content">
-                <h3 class="bg_gradient font-notosans white bold">トレーナーの仕事内容を動画でご紹介</h3>
+                <h3 class="bg_gradient_noanimation font-notosans white bold">トレーナーの仕事内容を動画でご紹介</h3>
                 <iframe src="https://www.youtube.com/embed/M15nCZH8PkI?si=cBLEOEnc6Q1NwG2x" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-                <h3 class="bg_gradient font-notosans white bold">トレーナーの1日の流れ</h3>
+                <h3 class="bg_gradient_noanimation font-notosans white bold">トレーナーの1日の流れ</h3>
 
                 <ul class="timeline">
                     <li><!--線が伸びる基準となるHTML。liを基準として、spanに指定された線を伸ばします。-->
@@ -301,7 +301,7 @@
                         </div>
                         <div class="interview_item_text_qa font-notosans">
                             <h4 class="medium lightblue">現在の仕事のおもしろさはなんですか？</h4>
-                            <p class="regular navy">スタッフたちが成長し、豊かな生活を送る手助けができることです。スタッフたちが幸福度を高め、やりがいを感じながら働くことができる環境を整えることで、自分自身も充実感を得ることができます。</p>
+                            <p class="regular navy">スタッフたちが成長し、豊かな生活を送る手助けができることです。<br class="sp_only">スタッフたちが幸福度を高め、やりがいを感じながら働ける環境を整えることで、自分自身も充実感を得ることができます。</p>
                         </div>
 
                         <div class="interview_item_text_qa font-notosans">
@@ -476,18 +476,18 @@
 
                     <tr>
                         <th class="medium">仕事内容</th>
-                        <td class="regular"><p>体感軸調整トレーナーとして、お客様への施術・接客をお任せ致します。<br>
+                        <td class="regular"><p>体感軸調整トレーナーとして、お客様への施術・接客をお任せします。<br>
                         これまで大勢のトレーナーを輩出した充実の研修制度がありますので、未経験でもご安心ください！ <br>
                         （ZSTA協会認定トレーナー資格取得可）<p>
                         <p class="table_navy_bg medium white">入社後は...？</p>
-                        <p>ストレッチ専門店は新しい分野。勢いのある当店で皆さんの色を積極的にドンドン出してもらいたいと思ってます。 「こんなお店にしたい」「こんな事をやってみたい」等、やりたい事をどんどん遠慮なく聞かせてください！また当社はキャリアアップへのステージもご用意しております。「技術力」「カウンセリングスキル」「マネジメント能力」「店舗運営」等、 ご自身の目標に向けた必要なスキルを磨いていきたい意欲を、全力でバックアップしていきます！</p>
+                        <p>ストレッチ専門店は新しい分野。勢いのある当店で皆さんの色を積極的にドンドン出してもらいたいと思ってます。 「こんなお店にしたい」「こんな事をやってみたい」等、やりたい事をどんどん遠慮なく聞かせてください！<br>また当社はキャリアアップへのステージもご用意しております。「技術力」「カウンセリングスキル」「マネジメント能力」「店舗運営」等、 ご自身の目標に向けた必要なスキルを磨いていきたい意欲を、全力でバックアップしていきます！</p>
                         </td>
                     </tr>
 
                     <tr>
                         <th class="medium">応募資格</th>
                         <td class="regular">〈未経験・フリーランス歓迎！〉<br>
-                        ◎学歴・ブランク・知識・経験など一切不問！<br>
+                        学歴・ブランク・知識・経験など一切不問！<br>
                         ★独立支援サポート有！野心のある方も歓迎！</td>
                     </tr>
 
@@ -520,8 +520,12 @@
                         <td class="regular"><p>時給1,600円～5,000円<br>
                         ◎随時昇給・昇格あり！<p>
                         <p class="table_navy_bg medium white">月収例</p>
-                        <p>・10:00～14:00 (実働4h)<br>
-                        ・10:00～19:00 (実働8h)</p>
+                        <p>・週5回勤務の場合<br>
+                        月160時間×時給4,000円＋指名300,000円＝940,000円<br>
+                        ・週3回勤務の場合<br>
+                        月96時間×時給3,000円＋指名210,000円＝498,000円<br>
+                        ・週2回勤務の場合<br>
+                        月64時間×時給1,800円＋指名150,000円＝265,200円</p>
                         </td>
                     </tr>
 
