リンクの設定をしました。

--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,11 @@
     <!-- Media -->
     <link rel="stylesheet" type="text/css" href="assets/css/slick.css"/>
 </head>
-<body>
+<body id="page-link">
     <header class="header js-header">
         <h1><img src="assets/images/common/logo_wh.png" alt="全力ストレッチ"></h1>
         <div class="header_right">
-            <button class="gradient-btn pc_only" type="button" onclick="location.href='#entry'">WEBで簡単エントリー</button>
+            <a class="button gradient-btn pc_only" href="#entry">WEBで簡単エントリー</a>
 
             <!-- ハンバーガーメニュー -->
             <div class="openbtn2"><span class="js-header change-color"></span><span class="js-header change-color"></span></div>
@@ -68,7 +68,7 @@
                             </p>
                         </div>
                     </div>
-                    <button class="gradient-btn" type="button" onclick="location.href='#entry'">WEBで簡単エントリー<svg id="_レイヤー_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.1 20.77"><defs><style>.cls-1{fill:#fff;}</style></defs><g id="design"><polygon class="cls-1" points=".64 20.77 0 20 11.54 10.38 0 .77 .64 0 13.1 10.38 .64 20.77"/></g></svg></button>
+                    <a class="button gradient-btn" href="#entry">WEBで簡単エントリー<svg id="_レイヤー_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.1 20.77"><defs><style>.cls-1{fill:#fff;}</style></defs><g id="design"><polygon class="cls-1" points=".64 20.77 0 20 11.54 10.38 0 .77 .64 0 13.1 10.38 .64 20.77"/></g></svg></a>
                 </div>
                 <div class="keyvisual_right pc_only"><img src="assets/images/keyvisual/keyvisual_img_1.png"></div>
             </div>
@@ -455,7 +455,7 @@
                     <h3 class="font-notosans medium navy">一歩踏み出そう｡</h3>
                     <p class="font-notosans bold white">今エントリーされた方に限り､<br class="sp_only">資格講習費の<span>10</span>万円が<span class="cta_number">0</span>円で<br>
                     ZSTA協会認定トレーナー資格が<br class="sp_only">取得できるキャンペーン中！</p>
-                    <button class="gradient-btn" type="button" onclick="location.href='#entry'">WEBで簡単エントリー<svg id="_レイヤー_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.1 20.77"><defs><style>.cls-1{fill:#fff;}</style></defs><g id="design"><polygon class="cls-1" points=".64 20.77 0 20 11.54 10.38 0 .77 .64 0 13.1 10.38 .64 20.77"/></g></svg></button>
+                    <a class="button gradient-btn" href="#entry">WEBで簡単エントリー<svg id="_レイヤー_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.1 20.77"><defs><style>.cls-1{fill:#fff;}</style></defs><g id="design"><polygon class="cls-1" points=".64 20.77 0 20 11.54 10.38 0 .77 .64 0 13.1 10.38 .64 20.77"/></g></svg></a>
                 </div>
                 <img class="sp_only" src="assets/images/flow/flow_cta_img.png">
             </div>
@@ -559,7 +559,7 @@
         </section>
 
         <section id="entry">
-            <div class="entry_title white">
+            <div id="end" class="entry_title white">
                 <h2 class="font-roboto bold fadeUpTrigger">ENTRY</h2>
                 <span class="font-notosans medium fadeDownTrigger">エントリーフォーム</span>
             </div>
@@ -639,6 +639,8 @@
         <a href="#"><img src="assets/images/common/logo_bk.png" alt="全力ストレッチ"></a>
 
         <small class="font-notosans regular navy">&copy;2024 全力ストレッチ All Rights Reserved.</small>
+
+        <div class="floatBtn button_wrap sp_only"><a class="gradient-btn" href="#entry">WEBで簡単エントリー<svg id="_レイヤー_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.1 20.77"><defs><style>.cls-1{fill:#fff;}</style></defs><g id="design"><polygon class="cls-1" points=".64 20.77 0 20 11.54 10.38 0 .77 .64 0 13.1 10.38 .64 20.77"/></g></svg></a></div>
         
     </footer>
 
