--- a/src/index.html
+++ b/src/index.html
@@ -50,9 +50,9 @@
         <section id="keyvisual" class="fv">
             <div class="keyvisual_content">
                 <div class="keyvisual_left">
-                    <img src="assets/images/keyvisual/keyvisual_title.svg" alt="あなたが輝く最高のキャリア">
+                    <div class="slide-in leftAnime"><img class="slide-in_inner leftAnimeInner" src="assets/images/keyvisual/keyvisual_title.svg" alt="あなたが輝く最高のキャリア"></div>
                     <img class="kevisual_img sp_only" src="assets/images/keyvisual/keyvisual_img_sp.png">
-                    <p class="keyvisual_copy font-notosans bold white">未経験からでも<span class="yellow slide-in-bottomTrigger">年収<span class="ten-million font-roboto bold">1<span class="comma">,</span>000</span>万円</span>が目指せる</p>
+                    <p class="keyvisual_copy font-notosans bold white">未経験からでも<span class="yellow slide-in-bottomTrigger delay-time05">年収<span class="ten-million font-roboto bold">1<span class="comma">,</span>000</span>万円</span>が目指せる</p>
                     <div class="keyvisual_left_point">
                         <div class="keyvisual_left_point_item">
                             <h3 class="font-roboto bold"><span class="tx_gradient point">POINT.</span><span class="tx_gradient number">01</span></h3>
@@ -95,7 +95,7 @@
                         <p class="data medium">勤務務時間：160h/月<br>
                         指名料：270,000円<br>
                         給与：1,000,000円</p>
-                        <p class="salary white bold bg_gradient_Trigger">月収<span class="price font-roboto medium">1,270,000</span>円</p>
+                        <p class="salary bold bg_gradient_Trigger">月収<span class="price font-roboto medium">1,270,000</span>円</p>
                     </div>
 
                     <div class="precedent_bottom_item font-notosans">
@@ -104,7 +104,7 @@
                         <p class="data medium">勤務務時間：140h/月<br>
                             指名料：180,000円<br>
                             給与：540,000円</p>
-                        <p class="salary white bold bg_gradient_Trigger delay-time02">月収<span class="price font-roboto medium">720,000</span>円</p>
+                        <p class="salary bold bg_gradient_Trigger delay-time02">月収<span class="price font-roboto medium">720,000</span>円</p>
                     </div>
 
                     <div class="precedent_bottom_item font-notosans">
@@ -113,7 +113,7 @@
                         <p class="data medium">勤務務時間：120h/月<br>
                             指名料：153,000円<br>
                             給与：360,000円</p>
-                        <p class="salary white bold bg_gradient_Trigger delay-time04">月収<span class="price font-roboto medium">513,000</span>円</p>
+                        <p class="salary bold bg_gradient_Trigger delay-time04">月収<span class="price font-roboto medium">513,000</span>円</p>
                     </div>
                 </div>
             </div>
@@ -518,13 +518,13 @@
                     <tr>
                         <th class="medium">給与</th>
                         <td class="regular"><p>時給1,600円～5,000円<br>
-                        ◎随時昇給・昇格あり！<p>
+                        ★随時昇給・昇格あり！<p>
                         <p class="table_navy_bg medium white">月収例</p>
-                        <p>・週5回勤務の場合<br>
+                        <p>★週5回勤務の場合<br>
                         月160時間×時給4,000円＋指名300,000円＝940,000円<br>
-                        ・週3回勤務の場合<br>
+                        ★週3回勤務の場合<br>
                         月96時間×時給3,000円＋指名210,000円＝498,000円<br>
-                        ・週2回勤務の場合<br>
+                        ★週2回勤務の場合<br>
                         月64時間×時給1,800円＋指名150,000円＝265,200円</p>
                         </td>
                     </tr>
