--- a/src/index.html
+++ b/src/index.html
@@ -177,7 +177,7 @@
                     <div class="point_item_text">
                         <span class="font-roboto bold tx_gradient">02</span>
                         <h3 class="font-notosans bold lineAnimation marker-text"><span class="marker-text-inner">充実した研修制度で</span></h3>
-                        <h3 class="font-notosans bold lineAnimation marker-text "><span class="marker-text-inner">未経験でも安心</span></h3>
+                        <h3 class="font-notosans bold lineAnimation marker-text delay-time02"><span class="marker-text-inner">未経験でも安心</span></h3>
                         <p class="font-notosans regular navy fadeUpTrigger delay-time05">全力ストレッチは若いスタッフが多く、9割の子が整体、フィットネス、ストレッチの経験がありません。<br>
                         そこから独自の教育メソッドで短期間でプロのパーソナルトレーナーに成長出来る研修制度がありますので、未経験でも安心して飛び込んできてください。また、就業後も定期的に研修を行っており、より技術を磨いてリピート率を上げたい子を支援しています。</p>
                     </div>
@@ -189,7 +189,7 @@
                     <div class="point_item_text">
                         <span class="font-roboto bold tx_gradient">03</span>
                         <h3 class="font-notosans bold lineAnimation marker-text"><span class="marker-text-inner">独立支援でキャリアアップも</span></h3>
-                        <h3 class="font-notosans bold lineAnimation marker-text delay-time1"><span class="marker-text-inner">徹底サポート</span></h3>
+                        <h3 class="font-notosans bold lineAnimation marker-text delay-time02"><span class="marker-text-inner">徹底サポート</span></h3>
                         <p class="font-notosans regular navy fadeUpTrigger delay-time05">次のステップに進みたい子を支援する社内ベンチャー制度があり、店舗オーナーになることや講師になるといったストレッチトレーナーの次のキャリアもご用意してあります。</p>
                     </div>
                 </div>
@@ -327,7 +327,7 @@
                     </div>
                     <div class="area_content">
                         <p class="bg_gradient_text lineAnimation marker-text font-notosans bold"><span class="marker-text-inner">全力ストレッチは全国35店舗</span></p>
-                        <p class="bg_gradient_text lineAnimation marker-text font-notosans bold"><span class="marker-text-inner">まだまだ出店拡大中！</span></p>
+                        <p class="bg_gradient_text lineAnimation marker-text delay-time02 font-notosans bold"><span class="marker-text-inner">まだまだ出店拡大中！</span></p>
                         <p class="font-notosans regular navy">一緒に全力ストレッチを育てていける<br>スタッフを募集しています。</p>
                     </div>
                 </div>
@@ -452,7 +452,7 @@
             <div class="flow_calltoaction">
                 <div class="flow_calltoaction_content">
                     <h3 class="font-notosans medium lineAnimation marker-text"><span class="marker-text-inner">理想の未来に､</span></h3>
-                    <h3 class="font-notosans medium lineAnimation marker-text"><span class="marker-text-inner">一歩踏み出そう｡</span></h3>
+                    <h3 class="font-notosans medium lineAnimation marker-text delay-time02"><span class="marker-text-inner">一歩踏み出そう｡</span></h3>
                     <p class="font-notosans bold white">今エントリーされた方に限り､<br class="sp_only">資格講習費の<span>10</span>万円が<span class="cta_number">0</span>円で<br>
                     ZSTA協会認定トレーナー資格が<br class="sp_only">取得できるキャンペーン中！</p>
                     <a class="button gradient-btn" href="#entry">WEBで簡単エントリー<svg id="_レイヤー_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.1 20.77"><defs><style>.cls-1{fill:#fff;}</style></defs><g id="design"><polygon class="cls-1" points=".64 20.77 0 20 11.54 10.38 0 .77 .64 0 13.1 10.38 .64 20.77"/></g></svg></a>
