mediaのスライダーの調整をしました。

--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
                             </p>
                         </div>
                     </div>
-                    <a class="button gradient-btn" href="#entry">WEBで簡単エントリー<svg id="_レイヤー_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.1 20.77"><defs><style>.cls-1{fill:#fff;}</style></defs><g id="design"><polygon class="cls-1" points=".64 20.77 0 20 11.54 10.38 0 .77 .64 0 13.1 10.38 .64 20.77"/></g></svg></a>
+                    <a id="js-floating-start" class="button gradient-btn" href="#entry">WEBで簡単エントリー<svg id="_レイヤー_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.1 20.77"><defs><style>.cls-1{fill:#fff;}</style></defs><g id="design"><polygon class="cls-1" points=".64 20.77 0 20 11.54 10.38 0 .77 .64 0 13.1 10.38 .64 20.77"/></g></svg></a>
                 </div>
                 <div class="keyvisual_right pc_only"><img src="assets/images/keyvisual/keyvisual_img_1.png"></div>
             </div>
@@ -281,12 +281,12 @@
                             <span>中途入社6年目</span>
                             <h3>ERISAさん</h3>
                         </div>
-                        <div class="interview_item_text_qa font-notosans">
+                        <div class="interview_item_text_qa font-notosans slide-in-bottomTrigger delay-time02">
                             <h4 class="medium lightblue">どうして全力ストレッチを選んだのか。</h4>
                             <p class="regular navy">女性専門のアパレルで経験を積んでいた中で、美容や健康に対する興味が芽生えました。当時、ヨガブームが広がっていたこともあり、体のことについて深く学びたいと思ったことがきっかけです。</p>
                         </div>
 
-                        <div class="interview_item_text_qa font-notosans">
+                        <div class="interview_item_text_qa font-notosans slide-in-bottomTrigger delay-time04">
                             <h4 class="medium lightblue">現在の仕事のおもしろさは何ですか？</h4>
                             <p class="regular navy">トレーナー時代は、自分の指名を増やして売り上げを増やし、それが収入に繋がることが最大の楽しみでした。当社に入社することで、収入面や精神面もかなり安定し、仕事に対するモチベーションも高まりました。</p>
                         </div>
@@ -299,12 +299,12 @@
                             <span>全力ストレッチ 六本木店</span>
                             <h3>MARIさん</h3>
                         </div>
-                        <div class="interview_item_text_qa font-notosans">
+                        <div class="interview_item_text_qa font-notosans slide-in-bottomTrigger delay-time02">
                             <h4 class="medium lightblue">現在の仕事のおもしろさはなんですか？</h4>
                             <p class="regular navy">スタッフたちが成長し、豊かな生活を送る手助けができることです。<br class="sp_only">スタッフたちが幸福度を高め、やりがいを感じながら働ける環境を整えることで、自分自身も充実感を得ることができます。</p>
                         </div>
 
-                        <div class="interview_item_text_qa font-notosans">
+                        <div class="interview_item_text_qa font-notosans slide-in-bottomTrigger delay-time04">
                             <h4 class="medium lightblue">どんな働き方ができますか？
                             </h4>
                             <p class="regular navy">残業は一切なく、シフト制のお休みも柔軟に対応してもらえます。この前は有給を使って2週間のハワイ旅行に行ってきました。当社では家庭を優先に働く方も多いので、長期的な活躍が可能だと思います。</p>
@@ -462,7 +462,7 @@
         </section>
 
         <section id="recruit">
-            <div class="recruit_title">
+            <div id="js-floating-end" class="recruit_title">
                 <h2 class="sec_title fadeUpTrigger">RECRUIT</h2>
                 <span class="sec_title_sub fadeDownTrigger">募集要項</span>
             </div>
@@ -559,7 +559,7 @@
         </section>
 
         <section id="entry">
-            <div id="end" class="entry_title white">
+            <div class="entry_title white">
                 <h2 class="font-roboto bold fadeUpTrigger">ENTRY</h2>
                 <span class="font-notosans medium fadeDownTrigger">エントリーフォーム</span>
             </div>
@@ -642,14 +642,14 @@
 
         <div class="to-top"><a href="#keyvisual" class="arrow sample5-3"></a></div>
 
-        <div class="floatBtn button_wrap sp_only"><a class="gradient-btn" href="#entry">WEBで簡単エントリー<svg id="_レイヤー_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.1 20.77"><defs><style>.cls-1{fill:#fff;}</style></defs><g id="design"><polygon class="cls-1" points=".64 20.77 0 20 11.54 10.38 0 .77 .64 0 13.1 10.38 .64 20.77"/></g></svg></a></div>
+        <div id="js-floating" class="button_wrap sp_only is-hidden"><a class="gradient-btn" href="#entry">WEBで簡単エントリー<svg id="_レイヤー_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.1 20.77"><defs><style>.cls-1{fill:#fff;}</style></defs><g id="design"><polygon class="cls-1" points=".64 20.77 0 20 11.54 10.38 0 .77 .64 0 13.1 10.38 .64 20.77"/></g></svg></a></div>
         
     </footer>
 
     <!-- Media -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script type="text/javascript" src="assets/js/slick.min.js"></script>
-    <script type="text/javascript" src="assets/js/common.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
+    <!-- <script type="text/javascript" src="assets/js/slick.min.js"></script> -->
+    <!-- <script type="text/javascript" src="assets/js/common.js"></script> -->
     <!-- Timeline -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <!-- Carousel -->
