--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&family=Roboto:ital,wght@0,400;0,500;0,700;1,500;1,700&display=swap" rel="stylesheet">
     <!-- Media -->
     <link rel="stylesheet" type="text/css" href="./images/slick.css"/>
-<script defer src="main.f70a0188a9a08dc53405.js"></script><link href="main.css" rel="stylesheet"></head>
+<script defer src="main.ed14812989647db8ab48.js"></script><link href="main.css" rel="stylesheet"></head>
 <body id="page-link">
     <header class="header js-header">
         <h1><img src="./images/logo_wh.png" alt="全力ストレッチ"></h1>
@@ -647,9 +647,9 @@
     </footer>
 
     <!-- Media -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script type="text/javascript" src="./images/slick.min.js"></script>
-    <script type="text/javascript" src="./images/common.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
+    <!-- <script type="text/javascript" src="assets/js/slick.min.js"></script> -->
+    <!-- <script type="text/javascript" src="assets/js/common.js"></script> -->
     <!-- Timeline -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <!-- Carousel -->
