--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&family=Roboto:ital,wght@0,400;0,500;0,700;1,500;1,700&display=swap" rel="stylesheet">
     <!-- Media -->
     <link rel="stylesheet" type="text/css" href="./images/slick.css"/>
-<script defer src="main.ed14812989647db8ab48.js"></script><link href="main.css" rel="stylesheet"></head>
+<script defer src="main.e10ae2b9955110686352.js"></script><link href="main.css" rel="stylesheet"></head>
 <body id="page-link">
     <header class="header js-header">
         <h1><img src="./images/logo_wh.png" alt="全力ストレッチ"></h1>
@@ -190,7 +190,7 @@
                         <span class="font-roboto bold tx_gradient">03</span>
                         <h3 class="font-notosans bold lineAnimation marker-text"><span class="marker-text-inner">独立支援でキャリアアップも</span></h3>
                         <h3 class="font-notosans bold lineAnimation marker-text delay-time02"><span class="marker-text-inner">徹底サポート</span></h3>
-                        <p class="font-notosans regular navy fadeUpTrigger delay-time05">次のステップに進みたい子を支援する社内ベンチャー制度があり、店舗オーナーになることや講師になるといったストレッチトレーナーの次のキャリアもご用意してあります。</p>
+                        <p class="font-notosans regular navy fadeUpTrigger delay-time05">次のステップに進みたい子を支援する社内ベンチャー制度があり、店舗オーナーになることや講師になるといったストレッチトレーナーの次のキャリアもご用意しております。</p>
                     </div>
                 </div>
             </div>
@@ -590,41 +590,16 @@
                                     <div class="select_wrap"><select onchange="this.className=this.options[this.selectedIndex].className"
                                     class="input_lightblue" class="form_input regular" name="example" required>
                                         <option class="input_lightblue" value="">選択してください</option>
-                                        <option class="input_navy">札幌店</option>
-                                        <option class="input_navy">仙台店</option>
-                                        <option class="input_navy">東池袋店</option>
-                                        <option class="input_navy">池袋西口店</option>
-                                        <option class="input_navy">高田馬場店</option>
-                                        <option class="input_navy">新宿西口店</option>
-                                        <option class="input_navy">新宿三丁目店</option>
-                                        <option class="input_navy">新宿御苑店</option>
-                                        <option class="input_navy">渋谷宮益坂店</option>
-                                        <option class="input_navy">三軒茶屋店</option>
-                                        <option class="input_navy">中目黒店</option>
-                                        <option class="input_navy">学芸大学店</option>
-                                        <option class="input_navy">自由が丘店</option>
-                                        <option class="input_navy">恵比寿店</option>
-                                        <option class="input_navy">目黒店</option>
-                                        <option class="input_navy">赤坂店</option>
-                                        <option class="input_navy">麻布十番店</option>
-                                        <option class="input_navy">人形町店</option>
-                                        <option class="input_navy">新橋店</option>
-                                        <option class="input_navy">銀座５店</option>
-                                        <option class="input_navy">秋葉原店</option>
-                                        <option class="input_navy">三田店</option>
-                                        <option class="input_navy">六本木店</option>
-                                        <option class="input_navy">表参道店</option>
-                                        <option class="input_navy">西五反田店</option>
-                                        <option class="input_navy">町田店</option>
-                                        <option class="input_navy">吉祥寺店</option>
-                                        <option class="input_navy">川崎店</option>
-                                        <option class="input_navy">横浜元町店</option>
-                                        <option class="input_navy">横浜西口店</option>
-                                        <option class="input_navy">名古屋栄店</option>
-                                        <option class="input_navy">大阪堀江店</option>
-                                        <option class="input_navy">大阪西梅田店</option>
-                                        <option class="input_navy">神戸元町店</option>
-                                        <option class="input_navy">福岡天神赤坂店</option>
+                                        <option class="input_navy">札幌</option>
+                                        <option class="input_navy">仙台</option>
+                                        <option class="input_navy">東京23区</option>
+                                        <option class="input_navy">東京その他</option>
+                                        <option class="input_navy">川崎</option>
+                                        <option class="input_navy">横浜</option>
+                                        <option class="input_navy">名古屋</option>
+                                        <option class="input_navy">大阪</option>
+                                        <option class="input_navy">神戸</option>
+                                        <option class="input_navy">福岡</option>
                                     </select></div>
                                 </td>
                             </tr>
