--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&family=Roboto:ital,wght@0,400;0,500;0,700;1,500;1,700&display=swap" rel="stylesheet">
     <!-- Media -->
     <link rel="stylesheet" type="text/css" href="./images/slick.css"/>
-<script defer src="main.e10ae2b9955110686352.js"></script><link href="main.css" rel="stylesheet"></head>
+<script defer src="main.c86445454bb16f31bbb7.js"></script><link href="main.css" rel="stylesheet"></head>
 <body id="page-link">
     <header class="header js-header">
-        <h1><img src="./images/logo_wh.png" alt="全力ストレッチ"></h1>
+        <h1><img class="js-header scroll_01" src="./images/logo_white.svg" alt="全力ストレッチ"><img class="js-header scroll_02" src="./images/logo_navy.svg" alt="全力ストレッチ"></h1>
         <div class="header_right">
             <a class="button gradient-btn pc_only" href="#entry">WEBで簡単エントリー</a>
 
@@ -23,7 +23,7 @@
                 <nav id="g-nav">
                     <div id="g-nav-list"><!--ナビの数が増えた場合縦スクロールするためのdiv※不要なら削除-->
                         <!-- <div class="nav_wrap"> -->
-                            <img class="nav_logo pc_only" src="./images/logo_wh.png">
+                            <img class="nav_logo pc_only" src="./images/logo_white.svg">
                             <img class="nav_wrap_left pc_only" src="./images/nav_img.jpg">
                             <div class="nav_wrap_right">
                                 <img class="sp_only" src="./images/logo_bk.png">
@@ -211,12 +211,12 @@
                 <ul class="timeline">
                     <li><!--線が伸びる基準となるHTML。liを基準として、spanに指定された線を伸ばします。-->
                         <dl>
-                            <dt class="font-roboto medium navy">10:00</dt>
+                            <dt class="font-roboto medium navy">9:00</dt>
                             <dd class="slide-in-bottomTrigger">
                                 <img src="./images/schedule_img_10.jpg">
                                 <div class="timeline_text">
                                     <h4 class="font-notosans medium navy">出社</h4>
-                                    <p class="font-notosans">忙しくて大変なイメージではなく余裕感が伝わるテキストが良い。テキストテキストテキストテキストテキストテキストテキスト。</p>
+                                    <p class="font-notosans">着替えて身だしなみをチェックし、開店準備をします。前日の洗濯物を畳んだり、明日ご予約されているお客様に前日確認のLINEを送ります。</p>
                                 </div>
                             </dd>
                         </dl>
@@ -224,12 +224,12 @@
                     </li>
                     <li>
                         <dl>
-                            <dt class="font-roboto medium navy">11:00</dt>
+                            <dt class="font-roboto medium navy">10:00</dt>
                             <dd class="slide-in-bottomTrigger delay-time02">
                                 <img src="./images/schedule_img_11.jpg">
                                 <div class="timeline_text">
                                     <h4 class="font-notosans medium navy">トレーナー業務</h4>
-                                    <p class="font-notosans">忙しくて大変なイメージではなく余裕感が伝わるテキストが良い。テキストテキストテキストテキストテキストテキストテキスト。</p>
+                                    <p class="font-notosans">施術はもちろんお客様のお出迎えとお見送りも欠かしません。合間にはLINE対応やパソコン作業、SNS投稿、洗濯などをします。</p>
                                 </div>
                             </dd>
                         </dl>
@@ -242,7 +242,7 @@
                                 <img src="./images/schedule_img_13.jpg">
                                 <div class="timeline_text">
                                     <h4 class="font-notosans medium navy">お昼ご飯</h4>
-                                    <p class="font-notosans">忙しくて大変なイメージではなく余裕感が伝わるテキストが良い。テキストテキストテキストテキストテキストテキストテキスト。</p>
+                                    <p class="font-notosans">休憩時間内であればどこで昼食をとってもOK！スタッフルームもあるのでゆっくり過ごせます。</p>
                                 </div>
                             </dd>
                         </dl>
@@ -250,12 +250,12 @@
                     </li>
                     <li>
                         <dl>
-                            <dt class="font-roboto medium navy wh-mask">17:00</dt>
+                            <dt class="font-roboto medium navy wh-mask">18:00</dt>
                             <dd class="slide-in-bottomTrigger delay-time06">
                                 <img src="./images/schedule_img_17.jpg">
                                 <div class="timeline_text">
                                     <h4 class="font-notosans medium navy">退勤</h4>
-                                    <p class="font-notosans">忙しくて大変なイメージではなく余裕感が伝わるテキストが良い。テキストテキストテキストテキストテキストテキストテキスト。</p>
+                                    <p class="font-notosans">閉店後は掃除やパソコン作業、1日の売り上げ確認をしてから退勤します。</p>
                                 </div>
                             </dd>
                         </dl>
@@ -611,7 +611,7 @@
     </main>
     <footer>
         <p class="font-notosans regular navy">体幹軸調整で驚くほど広がる｡</p>
-        <a href="#"><img src="./images/logo_bk.png" alt="全力ストレッチ"></a>
+        <a href="#"><img src="./images/logo_navy.svg" alt="全力ストレッチ"></a>
 
         <small class="font-notosans regular navy">&copy;2024 全力ストレッチ All Rights Reserved.</small>
 
