--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <script defer src="main.c86445454bb16f31bbb7.js"></script><link href="main.css" rel="stylesheet"></head>
 <body id="page-link">
     <header class="header js-header">
-        <h1><img class="js-header scroll_01" src="./images/logo_white.svg" alt="全力ストレッチ"><img class="js-header scroll_02" src="./images/logo_navy.svg" alt="全力ストレッチ"></h1>
+        <h1><a href="#"><img class="js-header scroll_01" src="./images/logo_white.svg" alt="全力ストレッチ"><img class="js-header scroll_02" src="./images/logo_navy.svg" alt="全力ストレッチ"></a></h1>
         <div class="header_right">
             <a class="button gradient-btn pc_only" href="#entry">WEBで簡単エントリー</a>
 
