--- a/src/index.html
+++ b/src/index.html
@@ -5,25 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>求人募集｜全力ストレッチ</title>
     <meta name="description" content="">
+
+    <!-- Meta Pixel Code -->
+    <script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '447917234231193');
+    fbq('track', 'PageView');
+    </script>
+    <noscript><img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=447917234231193&ev=PageView&noscript=1"
+    /></noscript>
+    <!-- End Meta Pixel Code -->
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&family=Roboto:ital,wght@0,400;0,500;0,700;1,500;1,700&display=swap" rel="stylesheet">
+
     <!-- Media -->
     <link rel="stylesheet" type="text/css" href="assets/css/slick.css"/>
 </head>
 <body id="page-link">
     <header class="header js-header">
-        <h1><img src="assets/images/common/logo_wh.png" alt="全力ストレッチ"></h1>
+        <h1><a href="#"><img class="js-header scroll_01" src="assets/images/common/logo_white.svg" alt="全力ストレッチ"><img class="js-header scroll_02" src="assets/images/common/logo_navy.svg" alt="全力ストレッチ"></a></h1>
         <div class="header_right">
-            <a class="button gradient-btn pc_only" href="#entry">WEBで簡単エントリー</a>
+            <a class="button gradient-btn pc_only" href="https://s.lmes.jp/landing-qr/2003289799-0nARm347?uLand=dkynn5" target="_blank">WEBで簡単エントリー</a>
 
             <!-- ハンバーガーメニュー -->
             <div class="openbtn2"><span class="js-header change-color"></span><span class="js-header change-color"></span></div>
                 <nav id="g-nav">
                     <div id="g-nav-list"><!--ナビの数が増えた場合縦スクロールするためのdiv※不要なら削除-->
                         <!-- <div class="nav_wrap"> -->
-                            <img class="nav_logo pc_only" src="assets/images/common/logo_wh.png">
+                            <img class="nav_logo pc_only" src="assets/images/common/logo_white.svg">
                             <img class="nav_wrap_left pc_only" src="assets/images/common/nav_img.jpg">
                             <div class="nav_wrap_right">
                                 <img class="sp_only" src="assets/images/common/logo_bk.png">
@@ -38,7 +58,7 @@
                                     <li class="timeline_17"><a href="#recruit"><h2 class="tx_gradient" >RECRUIT</h2><span class="font-notosans medium navy">募集要項</span></a></li>
                                 </ul>
                                 <!-- <div class="button_wrap"><button class="gradient-btn" type="button" onclick="location.href='#entry'">WEBで簡単エントリー<svg id="_レイヤー_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.1 20.77"><defs><style>.cls-1{fill:#fff;}</style></defs><g id="design"><polygon class="cls-1" points=".64 20.77 0 20 11.54 10.38 0 .77 .64 0 13.1 10.38 .64 20.77"/></g></svg></button></div> -->
-                                <div class="button_wrap"><a class="gradient-btn" href="#entry">WEBで簡単エントリー<svg id="_レイヤー_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.1 20.77"><defs><style>.cls-1{fill:#fff;}</style></defs><g id="design"><polygon class="cls-1" points=".64 20.77 0 20 11.54 10.38 0 .77 .64 0 13.1 10.38 .64 20.77"/></g></svg></a></div>
+                                <div class="button_wrap"><a class="gradient-btn" href="https://s.lmes.jp/landing-qr/2003289799-0nARm347?uLand=dkynn5" target="_blank">WEBで簡単エントリー<svg id="_レイヤー_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.1 20.77"><defs><style>.cls-1{fill:#fff;}</style></defs><g id="design"><polygon class="cls-1" points=".64 20.77 0 20 11.54 10.38 0 .77 .64 0 13.1 10.38 .64 20.77"/></g></svg></a></div>
                             </div>
                         <!-- </div> -->
                     </div>
@@ -68,7 +88,7 @@
                             </p>
                         </div>
                     </div>
-                    <a id="js-floating-start" class="button gradient-btn" href="#entry">WEBで簡単エントリー<svg id="_レイヤー_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.1 20.77"><defs><style>.cls-1{fill:#fff;}</style></defs><g id="design"><polygon class="cls-1" points=".64 20.77 0 20 11.54 10.38 0 .77 .64 0 13.1 10.38 .64 20.77"/></g></svg></a>
+                    <a id="js-floating-start" class="button gradient-btn" href="https://s.lmes.jp/landing-qr/2003289799-0nARm347?uLand=dkynn5" target="_blank">WEBで簡単エントリー<svg id="_レイヤー_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.1 20.77"><defs><style>.cls-1{fill:#fff;}</style></defs><g id="design"><polygon class="cls-1" points=".64 20.77 0 20 11.54 10.38 0 .77 .64 0 13.1 10.38 .64 20.77"/></g></svg></a>
                 </div>
                 <div class="keyvisual_right pc_only"><img src="assets/images/keyvisual/keyvisual_img_1.png"></div>
             </div>
@@ -190,7 +210,7 @@
                         <span class="font-roboto bold tx_gradient">03</span>
                         <h3 class="font-notosans bold lineAnimation marker-text"><span class="marker-text-inner">独立支援でキャリアアップも</span></h3>
                         <h3 class="font-notosans bold lineAnimation marker-text delay-time02"><span class="marker-text-inner">徹底サポート</span></h3>
-                        <p class="font-notosans regular navy fadeUpTrigger delay-time05">次のステップに進みたい子を支援する社内ベンチャー制度があり、店舗オーナーになることや講師になるといったストレッチトレーナーの次のキャリアもご用意してあります。</p>
+                        <p class="font-notosans regular navy fadeUpTrigger delay-time05">次のステップに進みたい子を支援する社内ベンチャー制度があり、店舗オーナーになることや講師になるといったストレッチトレーナーの次のキャリアもご用意しております。</p>
                     </div>
                 </div>
             </div>
@@ -211,12 +231,12 @@
                 <ul class="timeline">
                     <li><!--線が伸びる基準となるHTML。liを基準として、spanに指定された線を伸ばします。-->
                         <dl>
-                            <dt class="font-roboto medium navy">10:00</dt>
+                            <dt class="font-roboto medium navy">9:00</dt>
                             <dd class="slide-in-bottomTrigger">
                                 <img src="assets/images/schedule/schedule_img_10.jpg">
                                 <div class="timeline_text">
                                     <h4 class="font-notosans medium navy">出社</h4>
-                                    <p class="font-notosans">忙しくて大変なイメージではなく余裕感が伝わるテキストが良い。テキストテキストテキストテキストテキストテキストテキスト。</p>
+                                    <p class="font-notosans">着替えて身だしなみをチェックし、開店準備をします。前日の洗濯物を畳んだり、明日ご予約されているお客様に前日確認のLINEを送ります。</p>
                                 </div>
                             </dd>
                         </dl>
@@ -224,12 +244,12 @@
                     </li>
                     <li>
                         <dl>
-                            <dt class="font-roboto medium navy">11:00</dt>
+                            <dt class="font-roboto medium navy">10:00</dt>
                             <dd class="slide-in-bottomTrigger delay-time02">
                                 <img src="assets/images/schedule/schedule_img_11.jpg">
                                 <div class="timeline_text">
                                     <h4 class="font-notosans medium navy">トレーナー業務</h4>
-                                    <p class="font-notosans">忙しくて大変なイメージではなく余裕感が伝わるテキストが良い。テキストテキストテキストテキストテキストテキストテキスト。</p>
+                                    <p class="font-notosans">施術はもちろんお客様のお出迎えとお見送りも欠かしません。合間にはLINE対応やパソコン作業、SNS投稿、洗濯などをします。</p>
                                 </div>
                             </dd>
                         </dl>
@@ -242,7 +262,7 @@
                                 <img src="assets/images/schedule/schedule_img_13.jpg">
                                 <div class="timeline_text">
                                     <h4 class="font-notosans medium navy">お昼ご飯</h4>
-                                    <p class="font-notosans">忙しくて大変なイメージではなく余裕感が伝わるテキストが良い。テキストテキストテキストテキストテキストテキストテキスト。</p>
+                                    <p class="font-notosans">休憩時間内であればどこで昼食をとってもOK！スタッフルームもあるのでゆっくり過ごせます。</p>
                                 </div>
                             </dd>
                         </dl>
@@ -250,12 +270,12 @@
                     </li>
                     <li>
                         <dl>
-                            <dt class="font-roboto medium navy wh-mask">17:00</dt>
+                            <dt class="font-roboto medium navy wh-mask">18:00</dt>
                             <dd class="slide-in-bottomTrigger delay-time06">
                                 <img src="assets/images/schedule/schedule_img_17.jpg">
                                 <div class="timeline_text">
                                     <h4 class="font-notosans medium navy">退勤</h4>
-                                    <p class="font-notosans">忙しくて大変なイメージではなく余裕感が伝わるテキストが良い。テキストテキストテキストテキストテキストテキストテキスト。</p>
+                                    <p class="font-notosans">閉店後は掃除やパソコン作業、1日の売り上げ確認をしてから退勤します。</p>
                                 </div>
                             </dd>
                         </dl>
@@ -455,7 +475,7 @@
                     <h3 class="font-notosans medium lineAnimation marker-text delay-time02"><span class="marker-text-inner">一歩踏み出そう｡</span></h3>
                     <p class="font-notosans bold white">今エントリーされた方に限り､<br class="sp_only">資格講習費の<span>10</span>万円が<span class="cta_number">0</span>円で<br>
                     ZSTA協会認定トレーナー資格が<br class="sp_only">取得できるキャンペーン中！</p>
-                    <a class="button gradient-btn" href="#entry">WEBで簡単エントリー<svg id="_レイヤー_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.1 20.77"><defs><style>.cls-1{fill:#fff;}</style></defs><g id="design"><polygon class="cls-1" points=".64 20.77 0 20 11.54 10.38 0 .77 .64 0 13.1 10.38 .64 20.77"/></g></svg></a>
+                    <a class="button gradient-btn" href="https://s.lmes.jp/landing-qr/2003289799-0nARm347?uLand=dkynn5" target="_blank">WEBで簡単エントリー<svg id="_レイヤー_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.1 20.77"><defs><style>.cls-1{fill:#fff;}</style></defs><g id="design"><polygon class="cls-1" points=".64 20.77 0 20 11.54 10.38 0 .77 .64 0 13.1 10.38 .64 20.77"/></g></svg></a>
                 </div>
                 <img class="sp_only" src="assets/images/flow/flow_cta_img.png">
             </div>
@@ -590,41 +610,16 @@
                                     <div class="select_wrap"><select onchange="this.className=this.options[this.selectedIndex].className"
                                     class="input_lightblue" class="form_input regular" name="example" required>
                                         <option class="input_lightblue" value="">選択してください</option>
-                                        <option class="input_navy">札幌店</option>
-                                        <option class="input_navy">仙台店</option>
-                                        <option class="input_navy">東池袋店</option>
-                                        <option class="input_navy">池袋西口店</option>
-                                        <option class="input_navy">高田馬場店</option>
-                                        <option class="input_navy">新宿西口店</option>
-                                        <option class="input_navy">新宿三丁目店</option>
-                                        <option class="input_navy">新宿御苑店</option>
-                                        <option class="input_navy">渋谷宮益坂店</option>
-                                        <option class="input_navy">三軒茶屋店</option>
-                                        <option class="input_navy">中目黒店</option>
-                                        <option class="input_navy">学芸大学店</option>
-                                        <option class="input_navy">自由が丘店</option>
-                                        <option class="input_navy">恵比寿店</option>
-                                        <option class="input_navy">目黒店</option>
-                                        <option class="input_navy">赤坂店</option>
-                                        <option class="input_navy">麻布十番店</option>
-                                        <option class="input_navy">人形町店</option>
-                                        <option class="input_navy">新橋店</option>
-                                        <option class="input_navy">銀座５店</option>
-                                        <option class="input_navy">秋葉原店</option>
-                                        <option class="input_navy">三田店</option>
-                                        <option class="input_navy">六本木店</option>
-                                        <option class="input_navy">表参道店</option>
-                                        <option class="input_navy">西五反田店</option>
-                                        <option class="input_navy">町田店</option>
-                                        <option class="input_navy">吉祥寺店</option>
-                                        <option class="input_navy">川崎店</option>
-                                        <option class="input_navy">横浜元町店</option>
-                                        <option class="input_navy">横浜西口店</option>
-                                        <option class="input_navy">名古屋栄店</option>
-                                        <option class="input_navy">大阪堀江店</option>
-                                        <option class="input_navy">大阪西梅田店</option>
-                                        <option class="input_navy">神戸元町店</option>
-                                        <option class="input_navy">福岡天神赤坂店</option>
+                                        <option class="input_navy">札幌</option>
+                                        <option class="input_navy">仙台</option>
+                                        <option class="input_navy">東京23区</option>
+                                        <option class="input_navy">東京その他</option>
+                                        <option class="input_navy">川崎</option>
+                                        <option class="input_navy">横浜</option>
+                                        <option class="input_navy">名古屋</option>
+                                        <option class="input_navy">大阪</option>
+                                        <option class="input_navy">神戸</option>
+                                        <option class="input_navy">福岡</option>
                                     </select></div>
                                 </td>
                             </tr>
@@ -636,13 +631,13 @@
     </main>
     <footer>
         <p class="font-notosans regular navy">体幹軸調整で驚くほど広がる｡</p>
-        <a href="#"><img src="assets/images/common/logo_bk.png" alt="全力ストレッチ"></a>
+        <a href="#"><img src="assets/images/common/logo_navy.svg" alt="全力ストレッチ"></a>
 
         <small class="font-notosans regular navy">&copy;2024 全力ストレッチ All Rights Reserved.</small>
 
         <div class="to-top"><a href="#keyvisual" class="arrow sample5-3"></a></div>
 
-        <div id="js-floating" class="button_wrap sp_only is-hidden"><a class="gradient-btn" href="#entry">WEBで簡単エントリー<svg id="_レイヤー_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.1 20.77"><defs><style>.cls-1{fill:#fff;}</style></defs><g id="design"><polygon class="cls-1" points=".64 20.77 0 20 11.54 10.38 0 .77 .64 0 13.1 10.38 .64 20.77"/></g></svg></a></div>
+        <div id="js-floating" class="button_wrap sp_only is-hidden"><a class="gradient-btn" href="https://s.lmes.jp/landing-qr/2003289799-0nARm347?uLand=dkynn5" target="_blank">WEBで簡単エントリー<svg id="_レイヤー_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.1 20.77"><defs><style>.cls-1{fill:#fff;}</style></defs><g id="design"><polygon class="cls-1" points=".64 20.77 0 20 11.54 10.38 0 .77 .64 0 13.1 10.38 .64 20.77"/></g></svg></a></div>
         
     </footer>
 
