フッターの背景色を変更しました。

--- a/src/index.html
+++ b/src/index.html
@@ -578,7 +578,7 @@
             </div>
         </section>
 
-        <section id="entry">
+        <!-- <section id="entry">
             <div class="entry_title white">
                 <h2 class="font-roboto bold fadeUpTrigger">ENTRY</h2>
                 <span class="font-notosans medium fadeDownTrigger">エントリーフォーム</span>
@@ -627,7 +627,7 @@
                         <input type="submit" value="送信">
                     </div>
             </div>
-        </section>
+        </section> -->
     </main>
     <footer>
         <p class="font-notosans regular navy">体幹軸調整で驚くほど広がる｡</p>
