コードの整理をしました。

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>求人募集｜全力ストレッチ</title>
     <meta name="description" content="">
+    <link rel="icon" type="image/png" href="./assets/images/common/favicon.png">
+
+    <!-- ogp -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="求人募集｜全力ストレッチ">
+    <!-- <meta property="og:description" content=""> -->
+    <meta property="og:site_name" content="求人募集｜全力ストレッチ">
+    <!-- <meta property="og:image" content=""> -->
 
     <!-- Meta Pixel Code -->
     <script>
