--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <header class="header js-header">
         <h1><a href="#"><img class="js-header scroll_01" src="./images/logo_white.svg" alt="全力ストレッチ"><img class="js-header scroll_02" src="./images/logo_navy.svg" alt="全力ストレッチ"></a></h1>
         <div class="header_right">
-            <a class="button gradient-btn pc_only" href="https://s.lmes.jp/landing-qr/2003289799-0nARm347?uLand=dkynn5" target="_blank">WEBで簡単エントリー</a>
+            <a class="button gradient-btn pc_only" href="https://s.lmes.jp/landing-qr/2003289799-0nARm347?uLand=nzICbf" target="_blank">WEBで簡単エントリー</a>
 
             <!-- ハンバーガーメニュー -->
             <div class="openbtn2"><span class="js-header change-color"></span><span class="js-header change-color"></span></div>
@@ -66,7 +66,7 @@
                                     <li class="timeline_17"><a href="#recruit"><h2 class="tx_gradient" >RECRUIT</h2><span class="font-notosans medium navy">募集要項</span></a></li>
                                 </ul>
                                 <!-- <div class="button_wrap"><button class="gradient-btn" type="button" onclick="location.href='#entry'">WEBで簡単エントリー<svg id="_レイヤー_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.1 20.77"><defs><style>.cls-1{fill:#fff;}</style></defs><g id="design"><polygon class="cls-1" points=".64 20.77 0 20 11.54 10.38 0 .77 .64 0 13.1 10.38 .64 20.77"/></g></svg></button></div> -->
-                                <div class="button_wrap"><a class="gradient-btn" href="https://s.lmes.jp/landing-qr/2003289799-0nARm347?uLand=dkynn5" target="_blank">WEBで簡単エントリー<svg id="_レイヤー_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.1 20.77"><defs><style>.cls-1{fill:#fff;}</style></defs><g id="design"><polygon class="cls-1" points=".64 20.77 0 20 11.54 10.38 0 .77 .64 0 13.1 10.38 .64 20.77"/></g></svg></a></div>
+                                <div class="button_wrap"><a class="gradient-btn" href="https://s.lmes.jp/landing-qr/2003289799-0nARm347?uLand=nzICbf" target="_blank">WEBで簡単エントリー<svg id="_レイヤー_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.1 20.77"><defs><style>.cls-1{fill:#fff;}</style></defs><g id="design"><polygon class="cls-1" points=".64 20.77 0 20 11.54 10.38 0 .77 .64 0 13.1 10.38 .64 20.77"/></g></svg></a></div>
                             </div>
                         <!-- </div> -->
                     </div>
@@ -96,7 +96,7 @@
                             </p>
                         </div>
                     </div>
-                    <a id="js-floating-start" class="button gradient-btn" href="https://s.lmes.jp/landing-qr/2003289799-0nARm347?uLand=dkynn5" target="_blank">WEBで簡単エントリー<svg id="_レイヤー_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.1 20.77"><defs><style>.cls-1{fill:#fff;}</style></defs><g id="design"><polygon class="cls-1" points=".64 20.77 0 20 11.54 10.38 0 .77 .64 0 13.1 10.38 .64 20.77"/></g></svg></a>
+                    <a id="js-floating-start" class="button gradient-btn" href="https://s.lmes.jp/landing-qr/2003289799-0nARm347?uLand=nzICbf" target="_blank">WEBで簡単エントリー<svg id="_レイヤー_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.1 20.77"><defs><style>.cls-1{fill:#fff;}</style></defs><g id="design"><polygon class="cls-1" points=".64 20.77 0 20 11.54 10.38 0 .77 .64 0 13.1 10.38 .64 20.77"/></g></svg></a>
                 </div>
                 <div class="keyvisual_right pc_only"><img src="./images/keyvisual_img_1.png"></div>
             </div>
@@ -483,7 +483,7 @@
                     <h3 class="font-notosans medium lineAnimation marker-text delay-time02"><span class="marker-text-inner">一歩踏み出そう｡</span></h3>
                     <p class="font-notosans bold white">今エントリーされた方に限り､<br class="sp_only">資格講習費の<span>10</span>万円が<span class="cta_number">0</span>円で<br>
                     ZSTA協会認定トレーナー資格が<br class="sp_only">取得できるキャンペーン中！</p>
-                    <a class="button gradient-btn" href="https://s.lmes.jp/landing-qr/2003289799-0nARm347?uLand=dkynn5" target="_blank">WEBで簡単エントリー<svg id="_レイヤー_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.1 20.77"><defs><style>.cls-1{fill:#fff;}</style></defs><g id="design"><polygon class="cls-1" points=".64 20.77 0 20 11.54 10.38 0 .77 .64 0 13.1 10.38 .64 20.77"/></g></svg></a>
+                    <a class="button gradient-btn" href="https://s.lmes.jp/landing-qr/2003289799-0nARm347?uLand=nzICbf" target="_blank">WEBで簡単エントリー<svg id="_レイヤー_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.1 20.77"><defs><style>.cls-1{fill:#fff;}</style></defs><g id="design"><polygon class="cls-1" points=".64 20.77 0 20 11.54 10.38 0 .77 .64 0 13.1 10.38 .64 20.77"/></g></svg></a>
                 </div>
                 <img class="sp_only" src="./images/flow_cta_img.png">
             </div>
@@ -645,7 +645,7 @@
 
         <div class="to-top"><a href="#keyvisual" class="arrow sample5-3"></a></div>
 
-        <div id="js-floating" class="button_wrap sp_only is-hidden"><a class="gradient-btn" href="https://s.lmes.jp/landing-qr/2003289799-0nARm347?uLand=dkynn5" target="_blank">WEBで簡単エントリー<svg id="_レイヤー_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.1 20.77"><defs><style>.cls-1{fill:#fff;}</style></defs><g id="design"><polygon class="cls-1" points=".64 20.77 0 20 11.54 10.38 0 .77 .64 0 13.1 10.38 .64 20.77"/></g></svg></a></div>
+        <div id="js-floating" class="button_wrap sp_only is-hidden"><a class="gradient-btn" href="https://s.lmes.jp/landing-qr/2003289799-0nARm347?uLand=nzICbf" target="_blank">WEBで簡単エントリー<svg id="_レイヤー_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.1 20.77"><defs><style>.cls-1{fill:#fff;}</style></defs><g id="design"><polygon class="cls-1" points=".64 20.77 0 20 11.54 10.38 0 .77 .64 0 13.1 10.38 .64 20.77"/></g></svg></a></div>
         
     </footer>
 
